rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_v_v151_2006-Amd1_V151SPRT-CAPABILITY.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_v_v151_2006-Amd1_V151SPRT-CAPABILITY.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod v151_sprt_capability {
    extern crate alloc;
    use super::multimedia_system_control::NonStandardParameter;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct V150MoIPCapabilitySprtParameters {
        #[rasn(value("140..=256"), identifier = "maxPayloadSizeChannel0")]
        pub max_payload_size_channel0: Option<u16>,
        #[rasn(value("132..=256"), identifier = "maxPayloadSizeChannel1")]
        pub max_payload_size_channel1: Option<u16>,
        #[rasn(value("32..=96"), identifier = "maxWindowSizeChannel1")]
        pub max_window_size_channel1: Option<u8>,
        #[rasn(value("132..=256"), identifier = "maxPayloadSizeChannel2")]
        pub max_payload_size_channel2: Option<u16>,
        #[rasn(value("8..=32"), identifier = "maxWindowSizeChannel2")]
        pub max_window_size_channel2: Option<u8>,
        #[rasn(value("140..=256"), identifier = "maxPayloadSizeChannel3")]
        pub max_payload_size_channel3: Option<u16>,
    }
    impl V150MoIPCapabilitySprtParameters {
        pub fn new(
            max_payload_size_channel0: Option<u16>,
            max_payload_size_channel1: Option<u16>,
            max_window_size_channel1: Option<u8>,
            max_payload_size_channel2: Option<u16>,
            max_window_size_channel2: Option<u8>,
            max_payload_size_channel3: Option<u16>,
        ) -> Self {
            Self {
                max_payload_size_channel0,
                max_payload_size_channel1,
                max_window_size_channel1,
                max_payload_size_channel2,
                max_window_size_channel2,
                max_payload_size_channel3,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct V150MoIPCapability {
        #[rasn(identifier = "nonStandard")]
        pub non_standard: Option<SequenceOf<NonStandardParameter>>,
        #[rasn(identifier = "sprtParameters")]
        pub sprt_parameters: Option<V150MoIPCapabilitySprtParameters>,
    }
    impl V150MoIPCapability {
        pub fn new(
            non_standard: Option<SequenceOf<NonStandardParameter>>,
            sprt_parameters: Option<V150MoIPCapabilitySprtParameters>,
        ) -> Self {
            Self {
                non_standard,
                sprt_parameters,
            }
        }
    }
}
