rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1080.0_2017-Cor1_Pbact-access.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1080.0_2017-Cor1_Pbact-access.asn1
---
Error matching ASN syntax at while parsing:
   ╭─[line 1, column 14]
   │
   │ 
 1 │  Pbact-access { joint-iso-itu-t(2) telebiometrics(42) thprot(10) Part0(0) module(0) pbact-access(2) version1(1) } ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
   │
───╯
