rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1080.1_2011_COMMAND-RESPONSE-EXAMPLE.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1080.1_2011_COMMAND-RESPONSE-EXAMPLE.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve supertype Identified-Command-Response of parameterized implementation.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod command_response_example {
    extern crate alloc;
    use super::e_health_command_response::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "Example-Command-Response")]
    pub struct ExampleCommandResponse(pub IdentifiedCommandResponse);
}
