rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1080.1_2011_E-health-command-response.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1080.1_2011_E-health-command-response.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod e_health_command_response {
    extern crate alloc;
    use super::e_health_setup::{EncryptionOptions, IntegrityOptions};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags, identifier = "Command-Response")]
    pub struct CommandResponse {
        #[rasn(identifier = "encryptionOptions")]
        pub encryption_options: EncryptionOptions,
        #[rasn(identifier = "integrityOptions")]
        pub integrity_options: IntegrityOptions,
        #[rasn(value("0.."))]
        pub content: OctetString,
    }
    impl CommandResponse {
        pub fn new(
            encryption_options: EncryptionOptions,
            integrity_options: IntegrityOptions,
            content: OctetString,
        ) -> Self {
            Self {
                encryption_options,
                integrity_options,
                content,
            }
        }
    }
}
