rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1080.1_2011_E-health-identification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1080.1_2011_E-health-identification.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 333, column 8]
     │
     │ 
 328 │  END
 330 │  		-- Generated by Asnp,
 331 │  		the ASN.1 pretty-printer of France Telecom R&D
     │
─────╯
