rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1080.1_2011_E-health-send-and-ack.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1080.1_2011_E-health-send-and-ack.asn1
---
Warnings:
SyntaxMismatch in ASN grammar: Syntax mismatch while resolving information object.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod e_health_send_and_ack {
    extern crate alloc;
    use super::e_health_setup::{EncryptionOptions, IntegrityOptions};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct AckError {
        pub code: Integer,
        pub parameter: Any,
    }
    impl AckError {
        pub fn new(code: Integer, parameter: Any) -> Self {
            Self { code, parameter }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    pub enum Ack {
        ok(()),
        error(AckError),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct Command {
        #[rasn(identifier = "encryptionOptions")]
        pub encryption_options: EncryptionOptions,
        #[rasn(identifier = "integrityOptions")]
        pub integrity_options: IntegrityOptions,
        #[rasn(value("0.."))]
        pub content: OctetString,
    }
    impl Command {
        pub fn new(
            encryption_options: EncryptionOptions,
            integrity_options: IntegrityOptions,
            content: OctetString,
        ) -> Self {
            Self {
                encryption_options,
                integrity_options,
                content,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags, identifier = "Identified-Simple-Message")]
    pub struct IdentifiedSimpleMessage {
        #[rasn(identifier = "sm-Identifier")]
        pub sm_identifier: ObjectIdentifier,
        #[rasn(identifier = "sm-Content")]
        pub sm_content: Any,
    }
    impl IdentifiedSimpleMessage {
        pub fn new(sm_identifier: ObjectIdentifier, sm_content: Any) -> Self {
            Self {
                sm_identifier,
                sm_content,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct Response {
        #[rasn(identifier = "encryptionOptions")]
        pub encryption_options: EncryptionOptions,
        #[rasn(identifier = "integrityOptions")]
        pub integrity_options: IntegrityOptions,
        #[rasn(value("0.."))]
        pub content: OctetString,
    }
    impl Response {
        pub fn new(
            encryption_options: EncryptionOptions,
            integrity_options: IntegrityOptions,
            content: OctetString,
        ) -> Self {
            Self {
                encryption_options,
                integrity_options,
                content,
            }
        }
    }
}
