rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x1080.1_2011_E-health-setup.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x1080.1_2011_E-health-setup.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod e_health_setup {
    extern crate alloc;
    use super::e_health_command_response::*;
    use super::e_health_send_and_ack::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " SetUp-Message-Request and Response for simple messages and for interactive"]
    #[doc = " message sequences"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags, identifier = "E-health-SetUp-Message-Request")]
    #[non_exhaustive]
    pub enum EHealthSetUpMessageRequest {
        simple(Any),
        interactive(Any),
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct EHealthSetUpMessageResponseInteractiveConditionalAccept {
        pub id: Any,
        #[rasn(identifier = "reduced-requirements")]
        pub reduced_requirements: Any,
        #[rasn(identifier = "voice-options")]
        pub voice_options: ObjectIdentifier,
        #[rasn(identifier = "video-options")]
        pub video_options: ObjectIdentifier,
    }
    impl EHealthSetUpMessageResponseInteractiveConditionalAccept {
        pub fn new(
            id: Any,
            reduced_requirements: Any,
            voice_options: ObjectIdentifier,
            video_options: ObjectIdentifier,
        ) -> Self {
            Self {
                id,
                reduced_requirements,
                voice_options,
                video_options,
            }
        }
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    pub enum EHealthSetUpMessageResponseInteractive {
        accept(()),
        #[rasn(identifier = "conditional-accept")]
        conditional_accept(EHealthSetUpMessageResponseInteractiveConditionalAccept),
        reject(()),
    }
    #[doc = " Top-level type"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags, identifier = "E-health-SetUp-Message-Response")]
    pub enum EHealthSetUpMessageResponse {
        simple(bool),
        interactive(EHealthSetUpMessageResponseInteractive),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct EncryptionOptions(pub bool);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct IntegrityOptions(pub bool);
}
